# ComPath-Utils

./: .bumpversion.cfg  .flake8  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py
src/compath_utils/: __init__.py  cli_utils.py  manager.py  models.py  utils.py  version.py
tests/: test_manager.py
