##########################
# Setup.py Configuration #
##########################
[metadata]
name = compath_utils
version = 0.3.3-dev
description = A utilities package for ComPath
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/compath/compath_utils
download_url = https://pypi.org/project/compath-utils
project_urls =
    Bug Tracker = https://github.com/compath/compath_utils/issues
    Source Code = https://github.com/compath/compath_utils
    Documentation = https://compath-utils.readthedocs.io

# Author information
author = Daniel Domingo-Fernández and Charles Tapley Hoyt
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Daniel Domingo-Fernández
maintainer_email = daniel.domingo.fernandez@scai.fraunhofer.de

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Pathways
    Systems Biology
    Networks Biology
    Curation

[options]
install_requires =
    bio2bel>=0.3.2
    pybel>=0.14.1
    sqlalchemy==1.3.8
    pandas==0.24.2
    click==7.0

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = compath_utils
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/compath_utils/
    .tox/*/lib/python*/site-packages/compath_utils/

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
